[package]
name = "pkce-std"
version = "0.2.0"
authors = ["nekitdev <nekit@nekit.dev>"]
edition = "2024"
description = "Handling Proof Key for Code Exchange."
documentation = "https://docs.rs/pkce-std"
readme = "README.md"
repository = "https://github.com/nekitdev/pkce-std"
license = "MIT"
keywords = ["pkce", "oauth", "security"]
categories = ["cryptography", "web-programming"]

[dependencies.base64]
version = "0.22.1"

[dependencies.const-macros]
version = "0.3.1"

[dependencies.constant_time_eq]
version = "0.4.2"

[dependencies.into-static]
version = "0.4.0"
optional = true

[dependencies.miette]
version = "7.6.0"
optional = true

[dependencies.rand]
version = "0.9.1"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[dependencies.sha2]
version = "0.10.9"

[dependencies.thiserror]
version = "2.0.12"

[features]
default = []
static = ["dep:into-static"]
diagnostics = ["dep:miette"]
serde = ["dep:serde"]
unsafe-assert = []

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
